--- a/client/src/index.html
+++ b/client/src/index.html
@@ -73,19 +73,21 @@
             <!-- TODO(Loading symbol, progresss according to total time? Completed steps?) -->
             <!-- TODO(BEN - Q | MAURO - Q) -->
             <h2 class="editable story-title" contenteditable="true" id="story-title"> The Mighty Dragon </h2>
-            <div id="story-article">
-                <p class="editable" contenteditable="true" id="story-p0"> This creature, the Mighty Dragon, lived
-                    hundreds of years, rising in the clouds above the world and his great body slowly sinking beneath
-                    the earth. His power was greater than all the dragons on Mount Fuji, as his body held more power
-                    than all the dragons in the world. </p>
+            <div id="story-article" contenteditable="true" class="editable">
+                <p id="story-p0"><strong> This creature, the Mighty Dragon,
+                        lived hundreds of years, rising in the clouds above the world and his great body slowly sinking
+                        beneath
+                        the earth.His power was greater than
+                        all the dragons on Mount Fuji, as his body held more power
+                        than all the dragons in the world.</strong> NOT GENERATED. </p>
                 <img class="story-img" src="unsplash25k/sketch_images/pWzcj7wnC-c.jpg" id="story-img0">
-                <p class="editable" contenteditable="true" id="story-p1">
+                <p id="story-p1">
                     So huge were his wings that he could fly over lands and water
                     with the ease of a bird. It would seem that he was invincible to the Japanese, so all Japan was awed
                     by the sight of the Mighty Dragon on the mountains of Fuji, only he could never make himself
                     understood as a name.</p>
                 <img class="story-img" src="unsplash25k/sketch_images/e9QFb4VVu8M.jpg" id="story-img1">
-                <p class="editable" contenteditable="true">
+                <p>
                     CONTINUE STORY HERE ... </p>
             </div>
         </article>
