API + footer + rating

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,8 +15,8 @@
   <meta name="title" content="MultiModalStory" />
   <meta name="description" content="Images-and-text storygeneration framework" />
   <!-- <link rel="image_src" href="" /> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
       Please enable it to continue.</strong>
   </noscript>
-  <div id="app"></div>
+  <div id="app" app-data="true"></div>
   <!-- built files will be auto injected -->
 </body>
 
