preview pic to represent website

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
   <!-- Meta Data about the site -->
   <meta name="title" content="MultiModalStory" />
   <meta name="description" content="Images-and-text storygeneration framework" />
+  <meta property="og:image" content="preview.png">
   <!-- <link rel="image_src" href="" /> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
